read coils and read discerete input were completed for modbus slave.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ configure_file (
 # Add platform-dependent targets early, so they can be configured by
 # platform
 add_library(mbus "")
-add_executable(mb_master ${CMAKE_SOURCE_DIR}/main/tcp_master.c)
+add_executable(mb_master ${CMAKE_SOURCE_DIR}/main/tcp_master.c ${CMAKE_SOURCE_DIR}/main/slave.c)
 
 # Platform configuration
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/${CMAKE_SYSTEM_NAME}.cmake)
